fix script and post

--- a/posts/sl2.mdx
+++ b/posts/sl2.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'SL2'
 publishedAt: '2025-06-18'
+summary: 'I bike.'
 ---
 
 Just got this new (er, well second hand) S-Works Tarmac SL2!
