--- a/posts/enigma.mdx
+++ b/posts/enigma.mdx
@@ -24,7 +24,7 @@ Once we were seated, we had the best eating experience ever!
 The salad was full of flavour, and was surprisingly cheesy (not in a bad way at all though!).
 The tacos were the most expensive tacos I have ever had, but the mix of texture and the sauce was what made it so good too!
 The scallop was okay, but with the drink and the cucumber part made it a lot better!
-The chicken with mushrooms was so good, the best meal ever (my partner says otherwise though),
+The chicken with mushrooms was so good, the best meal ever (Mexi says otherwise though),
 it’s like a mix of meatiness and sweet mushrooms which is a perfect combo in my eyes!
 The caviar was pretty good too, but the drink was very strong (as well as the starting kombucha).
 Lastly, there was this raspberry desert, but it was like a mix of candy and cakes and was not that sweet at all!
