--- a/posts/ax2025.mdx
+++ b/posts/ax2025.mdx
@@ -9,28 +9,28 @@ I went to anime expo for the first time during the Independence day long weekend
 First two days of AX, and boy, with 400k in attendance for the entire event, it feels so much bigger than Anime North and Otakuthon! There are 20+ rows of artist alleys and a lot of big Japanese companies present in exhibit hall! There's also an entertainment hall which honestly felt more like an extension of the exhibit center.
 
 <div class="w-[600px] grid grid-cols-3 grid-rows-3 gap-2">
-  <img src="/assets/b/log/ax/0.jpeg" class="object-cover w-full h-full" />
-  <img src="/assets/b/log/ax/1.jpeg" class="object-cover w-full h-full" />
-  <img src="/assets/b/log/ax/3.jpeg" class="object-cover w-full h-full" />
-  <img src="/assets/b/log/ax/4.jpeg" class="object-cover w-full h-full" />
-  <img src="/assets/b/log/ax/5.jpeg" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/0.jpeg" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/1.jpeg" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/3.jpeg" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/4.jpeg" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/5.jpeg" class="object-cover w-full h-full" />
 </div>
 
 And here's the gist of what the Entertainment and Exhibit halls look like! Lots of free stuff and lots of places to buy official merch too!
 
 <div class="w-[600px] grid grid-cols-3 grid-rows-3 gap-2">
-  <img src="/assets/b/log/ax/IMG_2345.png" class="object-cover w-full h-full" />
-  <img src="/assets/b/log/ax/IMG_2323.png" class="object-cover w-full h-full" />
-  <img src="/assets/b/log/ax/IMG_2285.png" class="object-cover w-full h-full" />
-  <img src="/assets/b/log/ax/10.jpeg" class="object-cover w-full h-full" />
-  <img src="/assets/b/log/ax/11.jpeg" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/IMG_2345.png" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/IMG_2323.png" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/IMG_2285.png" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/10.jpeg" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/11.jpeg" class="object-cover w-full h-full" />
 </div>
 
 The next 2 days of AX are more or less the same, so I'll give you the highlights instead.
 
 Leo and I was trying to enter the maimai lottery, and we both entered for a chance to play on the machines and get free gloves! Leo ended up winning the ticket, then gave it to me, and then I asked if Leo can join a match with me since we were the last in line and they said yes and gave him his own gloves too! They are so nice!
 
-![](/assets/b/log/ax/IMG_2381.png)
+![](/assets/b/log/ax2025/IMG_2381.png)
 
 Probably the highlight of today, we have watched Sukeban wrestling, 
 which by the way was my first time watching wrestling!
@@ -38,7 +38,7 @@ I know it's a bit fake (god I don't want to see blood and stuff) but it was very
 It's just amazing and there were in between "special moments" with a YoYo section and an idol group singing too!
 
 <div class="w-[600px] grid grid-cols-3 grid-rows-3 gap-2">
-  <img src="/assets/b/log/ax/IMG_2412.png" class="object-cover w-full h-full" />
+  <img src="/assets/b/log/ax2025/IMG_2412.png" class="object-cover w-full h-full" />
 </div>
 
 Overall, 10/10 would go again! Despite my worries about it being too hot or too crowded in the 
