--- a/posts/noogler.mdx
+++ b/posts/noogler.mdx
@@ -5,49 +5,49 @@ summary: "Welcome to Google Bay Area"
 ---
 
 <div class="w-[800px] h-[800px] grid grid-cols-3 grid-rows-3 gap-2">
-  <a href="/assets/b/log/noog25/1.jpeg">
-    <img src="/assets/b/log/noog25/1.jpeg" class="object-cover w-full h-full" />
+  <a href="/assets/b/log/noogler/1.jpeg">
+    <img src="/assets/b/log/noogler/1.jpeg" class="object-cover w-full h-full" />
   </a>
-  <a href="/assets/b/log/noog25/2.jpeg">
-    <img src="/assets/b/log/noog25/2.jpeg" class="object-cover w-full h-full" />
+  <a href="/assets/b/log/noogler/2.jpeg">
+    <img src="/assets/b/log/noogler/2.jpeg" class="object-cover w-full h-full" />
   </a>
-  <a href="/assets/b/log/noog25/3.jpeg">
-    <img src="/assets/b/log/noog25/3.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/3.jpeg">
+    <img src="/assets/b/log/noogler/3.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/4.jpeg">
-    <img src="/assets/b/log/noog25/4.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/4.jpeg">
+    <img src="/assets/b/log/noogler/4.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/5.jpeg">
-    <img src="/assets/b/log/noog25/5.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/5.jpeg">
+    <img src="/assets/b/log/noogler/5.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/6.jpeg">
-    <img src="/assets/b/log/noog25/6.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/6.jpeg">
+    <img src="/assets/b/log/noogler/6.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/7.jpeg">
-    <img src="/assets/b/log/noog25/7.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/7.jpeg">
+    <img src="/assets/b/log/noogler/7.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/8.jpeg">
-    <img src="/assets/b/log/noog25/8.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/8.jpeg">
+    <img src="/assets/b/log/noogler/8.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/9.jpeg">
-    <img src="/assets/b/log/noog25/9.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/9.jpeg">
+    <img src="/assets/b/log/noogler/9.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/10.jpeg">
-    <img src="/assets/b/log/noog25/10.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/10.jpeg">
+    <img src="/assets/b/log/noogler/10.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/11.jpeg">
-    <img src="/assets/b/log/noog25/11.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/11.jpeg">
+    <img src="/assets/b/log/noogler/11.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/12.jpeg">
-    <img src="/assets/b/log/noog25/12.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/12.jpeg">
+    <img src="/assets/b/log/noogler/12.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/13.jpeg">
-    <img src="/assets/b/log/noog25/13.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/13.jpeg">
+    <img src="/assets/b/log/noogler/13.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/14.jpeg">
-    <img src="/assets/b/log/noog25/14.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/14.jpeg">
+    <img src="/assets/b/log/noogler/14.jpeg" class="object-cover w-full h-full"/>
   </a>
-  <a href="/assets/b/log/noog25/15.jpeg">
-    <img src="/assets/b/log/noog25/15.jpeg" class="object-cover w-full h-full"/>
+  <a href="/assets/b/log/noogler/15.jpeg">
+    <img src="/assets/b/log/noogler/15.jpeg" class="object-cover w-full h-full"/>
   </a>
 </div>
